build/log/idf_py_stderr_output_15609
Command: make -j 14 all
Configuration Report               
 ───────────────────────────────── 
   Parser Version: 1               
   Verbosity: default              
   Status: Finished successfully   
                                   
 ───────────────────────────────── 
/home/frank/Projects/beemonitor/beemonitor/main/beemonitor.cpp:60:1: warning: missing initializer for member 'camera_config_t::ledc_timer' [-Wmissing-field-initializers]
   60 | };
      | ^
/home/frank/Projects/beemonitor/beemonitor/main/beemonitor.cpp:60:1: warning: missing initializer for member 'camera_config_t::pixel_format' [-Wmissing-field-initializers]
/home/frank/Projects/beemonitor/beemonitor/main/beemonitor.cpp:60:1: warning: missing initializer for member 'camera_config_t::frame_size' [-Wmissing-field-initializers]
/home/frank/Projects/beemonitor/beemonitor/main/beemonitor.cpp:60:1: warning: missing initializer for member 'camera_config_t::jpeg_quality' [-Wmissing-field-initializers]
/home/frank/Projects/beemonitor/beemonitor/main/beemonitor.cpp:60:1: warning: missing initializer for member 'camera_config_t::fb_count' [-Wmissing-field-initializers]
/home/frank/Projects/beemonitor/beemonitor/main/beemonitor.cpp:60:1: warning: missing initializer for member 'camera_config_t::fb_location' [-Wmissing-field-initializers]
/home/frank/Projects/beemonitor/beemonitor/main/beemonitor.cpp:60:1: warning: missing initializer for member 'camera_config_t::grab_mode' [-Wmissing-field-initializers]
/home/frank/Projects/beemonitor/beemonitor/main/beemonitor.cpp:60:1: warning: missing initializer for member 'camera_config_t::sccb_i2c_port' [-Wmissing-field-initializers]
/home/frank/Projects/beemonitor/beemonitor/main/beemonitor.cpp:60:1: error: designator order for field 'camera_config_t::ledc_timer' does not match declaration order in 'camera_config_t'
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/beemonitor.cpp.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6192: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
